; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ipw2x00/extr_ipw2100.c_ipw2100_hw_set_gpio.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ipw2x00/extr_ipw2100.c_ipw2100_hw_set_gpio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipw2100_priv = type { i32 }

@IPW_BIT_GPIO_GPIO3_MASK = common dso_local global i32 0, align 4
@IPW_BIT_GPIO_GPIO1_ENABLE = common dso_local global i32 0, align 4
@IPW_BIT_GPIO_LED_OFF = common dso_local global i32 0, align 4
@IPW_REG_GPIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ipw2100_priv*)* @ipw2100_hw_set_gpio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipw2100_hw_set_gpio(%struct.ipw2100_priv* %0) #0 {
  %2 = alloca %struct.ipw2100_priv*, align 8
  %3 = alloca i32, align 4
  store %struct.ipw2100_priv* %0, %struct.ipw2100_priv** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* @IPW_BIT_GPIO_GPIO3_MASK, align 4
  %5 = load i32, i32* @IPW_BIT_GPIO_GPIO1_ENABLE, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* @IPW_BIT_GPIO_LED_OFF, align 4
  %8 = or i32 %6, %7
  store i32 %8, i32* %3, align 4
  %9 = load %struct.ipw2100_priv*, %struct.ipw2100_priv** %2, align 8
  %10 = getelementptr inbounds %struct.ipw2100_priv, %struct.ipw2100_priv* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @IPW_REG_GPIO, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @write_register(i32 %11, i32 %12, i32 %13)
  ret void
}

declare dso_local i32 @write_register(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
